# rightplace

./: .gitignore  .plan.md  AGENT_ITERATION_LOOP.md  AUDIT_DEMO_GUIDE.md  AUDIT_DEMO_QUICKSTART.md  AUDIT_INTEGRATION_SUMMARY.md  AUDIT_SERVICE_IMPLEMENTATION.md  CLAUDE.md  PARALLEL_DEV_PROMPTS.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  PHASE_2_LFW_TESTING_SUMMARY.md  PROJECT_TODO.md  TEST_FIXES_SUMMARY.md  VALIDATION_REPORT.md  mcp_servers.json  prison-rollcall-design-document-v3.md  start-project.sh
server/: README.md  demo_rollcall.py  enroll_lfw_dataset.py  pyproject.toml  requirements.txt  start-backend.sh  test_testclient_fix.py
server/app/: config.py  dependencies.py  main.py
server/app/db/: database.py
server/app/ml/: __init__.py  face_detector.py  face_embedder.py  face_matcher.py
server/app/models/: __init__.py  audit.py  face.py  inmate.py  location.py  rollcall.py  schedule.py  sync.py  treemap.py  verification.py
server/app/services/: audit_service.py  face_recognition.py  pathfinding_service.py  rollcall_generator_service.py  rollcall_service.py  schedule_service.py  sync_service.py  treemap_service.py
server/demo_output/: detection_results.json  index.html  progressive_enrollment.html
server/docs/: audit_service.md  rollcall_generator_service.md
server/scripts/: README.md  apply_migration_003.py  apply_migration_004.py  apply_migration_005.py  clean_and_reseed.sh  demo_audit_api.sh  demo_audit_logging.py  demo_face_detection.py  demo_face_recognition_service.py  demo_progressive_enrollment.py  export_audit.py  generate_rollcalls.py  generate_schedules.py  generate_verifications.py  reseed_multiple_prisons.sh  seed_all.py  seed_hmp_oakwood.py  seed_inmates_for_prisons.py  seed_multiple_prisons.py  seed_prison.py  setup_db.py  test_treemap_data.py  useful_sql_scripts.sql  verify_diversity.py
server/tests/: conftest.py  test_project_setup.py
server/tests/fixtures/: README.md  prepare_lfw_fixtures.py
server/tests/integration/: test_audit_integration.py  test_audit_integration_api.py  test_detection_api.py  test_enrollment_api.py  test_health.py  test_inmates.py  test_locations.py  test_rollcall_treemap_api.py  test_rollcalls_api.py  test_schedule_api.py  test_sync_api.py  test_verification_api.py
server/tests/unit/: test_audit_service.py  test_config.py  test_connection_repo.py  test_database.py  test_embedding_repository.py  test_models.py  (+16 more)
(+151 files in other folders)
