[project]
name = "prison-rollcall-server"
version = "0.1.0"
description = "FastAPI server for Prison Roll Call face recognition system"
authors = [
    {name = "Prison Roll Call Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "starlette==0.35.1",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "numpy>=2.0,<2.3",
    "opencv-python>=4.9.0",
    "python-multipart==0.0.6",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.25",
    "opencv-python-headless>=4.9.0",
    "deepface>=0.0.93",
    "tf-keras>=2.16.0",
    "tensorflow>=2.20.0",
    "pytest==8.0.0",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "httpx==0.26.0",
    "black==24.1.1",
    "flake8==7.0.0",
    "mypy==1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx==0.26.0",
    "black>=24.1.1",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["demo_output*", "tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers -p no:asyncio"
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "cv2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "insightface.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
